<resources>
    <string name="app_name">JETLINE</string>
    <string name="booknow_main">Book Now</string>
    <string name="todo">TODO</string>
    <string name="decide_a_time_and_date">Decide a Time and Date</string>
    <string name="next">Next</string>
    <string name="choose_your_destination">Choose Your Destination</string>
    <string name="button">Button</string>
    <string name="next2">Next</string>
    <string name="book_now">Book Now</string>
    <string name="book_now_onboard3">Book Now</string>
    <string name="faster_and_easy_to_travel_anywhere_at_any_time">faster and easy to travel anywhere at any time</string>
    <string name="get_started">Get Started</string>
    <string name="enter_your_depature_station">Enter Your Depature Station</string>
    <string name="enter_your_arrival_station">Enter Your Arrival Station</string>
    <string name="home">Home</string>
    <string name="calender">calender</string>
    <string name="history">history</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">Booking</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="select_your_journey">Select Your Journey</string>
    <string name="find_schedules">Find Schedules</string>
    <string name="galle">Galle</string>
    <string name="colombo">Colombo</string>
    <string name="jagath_super_line">Jagath Super Line</string>
    <string name="_7_30_a_m">7.30 A.M.</string>
    <string name="galle_b">Galle</string>
    <string name="colombo_b">Colombo</string>
    <string name="_11_mar_2024">11 MAR 2024</string>
    <string name="_11_mar_2024_1">11 MAR 2024</string>
    <string name="buy_ticket">BuY Ticket</string>
    <string name="button_b">Button</string>
    <string name="button_p">Button</string>
    <string name="booking_history">Booking History</string>
    <string name="payment_history">Payment History</string>
    <string name="history_booking">History</string>
    <string name="jagath_super_line_h">Jagath Super Line</string>
    <string name="t0_colombo">T0 : Colombo</string>
    <string name="from_galle">From : Galle</string>
    <string name="date_h">Date : 11 MAR 2024</string>
    <string name="depature_time_8_00a_m">Depature Time : 8.00A.M.</string>
    <string name="arrival_time_11_15a_m">Arrival Time : 11.15A.M.</string>
    <string name="successfull">Successfull</string>
    <string name="profile_details">Profile Details</string>
    <string name="first_name">First Name</string>
    <string name="first_name_p">First Name</string>
    <string name="first_name_h">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_h">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_h">Email Address</string>
    <string name="password">Password</string>
    <string name="password_h">Password</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
</resources>