<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233975"
    tools:context=".History" >

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:background="@drawable/view3_radius"
        android:backgroundTint="#FFFFFF" />

    <Button
        android:id="@+id/button6"
        android:layout_width="209dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="173dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/booking_history"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="173dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/payment_history"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:background="#233975"
        android:src="@drawable/icons8_arrow_30" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="70dp"
        android:text="@string/history_booking"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <View
        android:id="@+id/view6"
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/textview_border"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="310dp"
        android:text="@string/jagath_super_line_h"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="370dp"
        android:text="@string/from_galle"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="435dp"
        android:text="@string/date_h"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:text="@string/t0_colombo"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="470dp"
        android:text="@string/depature_time_8_00a_m"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="500dp"
        android:text="@string/arrival_time_11_15a_m"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="550dp"
        android:text="@string/successfull"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold" />

</FrameLayout>