<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="95dp"
        app:srcCompat="@drawable/user1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/icons8_arrow_30" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:text="@string/profile_details"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="270dp"
        android:text="@string/first_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:hint="@string/first_name_h"
        android:inputType="text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:text="@string/last_name"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/last_name_h"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="370dp"
        android:text="@string/email_address"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="370dp"
        android:ems="10"
        android:hint="@string/email_address_h"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="450dp"
        android:text="@string/password"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="450dp"
        android:ems="10"
        android:hint="@string/password_h"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="500dp"
        android:text="Gender"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="500dp"
        android:ems="10"
        android:hint="Male/Female"
        android:inputType="text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="570dp"
        android:backgroundTint="#8BF8A9"
        android:text="@string/edit"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="570dp"
        android:text="@string/submit"
        android:textSize="24sp"/>

</FrameLayout>