<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#233975"
    tools:context=".Booking">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="175dp"
        android:background="@drawable/view3_radius"
        android:backgroundTint="#FFFFFF"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="100dp"
        android:text="@string/galle"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="230dp"
        android:text="@string/colombo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="320dp"
        android:text="Price:RS.650"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="270dp"
        android:backgroundTint="#8BF8A9"
        android:text="@string/buy_ticket" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="180dp"
        android:background="#233975"
        android:src="@drawable/icons8_double_right_50" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:background="#233975"
        android:src="@drawable/icons8_arrow_30" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="335dp"
        android:text="@string/_11_mar_2024_1" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="315dp"
        android:text="@string/colombo_b" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:text="@string/_11_mar_2024" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="270dp"
        android:text="@string/galle_b" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="235dp"
        android:text="@string/jagath_super_line"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="235dp"
        android:text="@string/_7_30_a_m"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view4"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/textview_border"
        android:foregroundTint="#C54242" />

</FrameLayout>