<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="395dp"
        android:layout_marginTop="175dp"
        android:background="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="162dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jetline_transport_service" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="5dp"
        android:text="@string/from"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="5dp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="@string/enter_your_depature_station"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_From" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginStart="5dp"
        android:textSize="24sp"
        android:text="@string/to" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginStart="5dp"
        android:textSize="24sp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="@string/enter_your_arrival_station"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="5dp"
        android:textSize="24sp"
        android:text="@string/date" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="410dp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="@string/select_your_journey"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="480dp"
        android:backgroundTint="#8BF8A9"
        android:text="@string/find_schedules"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="580dp"
        android:gravity="center"
        android:text="Bus Booking Made Easy And Efficient In Sri Lanka"
        android:textSize="38sp"
        android:textStyle="bold" />

</FrameLayout>