<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="162dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jetline_transport_service" />

    <View
        android:id="@+id/view"
        android:layout_width="387dp"
        android:layout_height="416dp"
        android:layout_marginTop="8dp"
        android:background="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView_From"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/textview_border"
        android:text="@string/from"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/to"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editTextText_From" />

    <EditText
        android:id="@+id/editTextText_From"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="@string/enter_your_depature_station"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_From" />

    <TextView
        android:id="@+id/textView4_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2_to" />

    <EditText
        android:id="@+id/editTextText2_to"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="@string/enter_your_arrival_station"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView3_to" />

    <EditText
        android:id="@+id/editTextText4_date"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:background="#FBFAFA"
        android:ems="10"
        android:hint="Select Your Journey"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView4_date" />

    <Button
        android:id="@+id/button4"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8BF8A9"
        android:text="Find Schedules"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4_date" />

</androidx.constraintlayout.widget.ConstraintLayout>